loan repayment task

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.show-sql=true
 
 #disable hibernate schema generation
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #To always run the database seed when application starts
 spring.sql.init.mode=always
@@ -17,3 +17,9 @@ spring.sql.init.mode=always
 # Logging configuration
 logging.level.org.springframework=INFO
 logging.level.com.example=DEBUG
+
+spring.security.user.name=user
+spring.security.user.password=password
+
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.cache=false
